# Simulation

bluerov_uuv/: CMakeLists.txt  package.xml
cmt_tracking/: CMakeLists.txt  package.xml
collect_data/: CMakeLists.txt  package.xml
collect_data/scripts/: collect_data.py  extract_data.py  gps.txt  imu.txt  pressure.txt
enigma_description/: CMakeLists.txt  package.xml
enigma_description/launch/: upload.launch
enigma_description/meshes/: bluerov.dae  fix_rov.dae  fixed_rov.dae
enigma_description/robots/: default.xacro
enigma_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
gazebo_oceancomm_sensor_plugin/: CMakeLists.txt  package.xml
gazebo_oceancomm_sensor_plugin/include/gazebo_oceancomm_sensor_plugin/: ArduSubPlugin.hh  oceancomm_sensor_plugin.h
gazebo_oceancomm_sensor_plugin/launch/: arducopter.launch  oceancomm.launch
gazebo_oceancomm_sensor_plugin/src/: ArduCopterPlugin.cc  ArduSubPlugin.cc  oceancomm_sensor_plugin.cpp
gazebo_oceancomm_sensor_plugin/worlds/: oceancomm.world
illinoisauv_transdec_robosub/: CMakeLists.txt  package.xml
illinoisauv_transdec_robosub/launch/: transdec.launch
illinoisauv_transdec_robosub/world_models/: CMakeLists.txt
illinoisauv_transdec_robosub/worlds/: CMakeLists.txt  transdec.world
trajectory_generator_custom_controls/: CMakeLists.txt  package.xml
trajectory_generator_custom_controls/launch/: dp_controller.launch  multiagent.launch  start_custom_controller_demo.launch  start_custom_enigma.launch
trajectory_generator_custom_controls/scripts/: 3D_traj_100.yaml  (+4 more)
(+13 files in other folders)
